Fix spacing of nav bar

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body {
 .header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #1f2937;
     padding: 16px 420px 160px;
 }
